2020-03-29  Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-cmd.c (skip_blanks): Remove superfluous check.

2020-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi: Change the sectioning and add a detailed menu.
	* doc/gen-pvm-insns.sh: Adapt accordingly.

2020-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (basic Editing): New chapter.

2020-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_cast): Allow casts from structs
	to structs.
	* src/pkl-gen.c (pkl_gen_ps_cast): Support struct-to-struct casts.
	* doc/poke.texi (Casting Structs): New section.
	* testsuite/poke.pkl/cast-struct-1.pk: New test.
	* testsuite/poke.pkl/cast-struct-4.pk: Likewise.
	* testsuite/poke.pkl/cast-struct-3.pk: Likewise.
	* testsuite/poke.pkl/cast-struct-2.pk: Likewise.
	* testsuite/poke.pkl/csat-struct-6.pk: Likewise.
	* testsuite/poke.pkl/cast-struct-5.pk: Likewise.

2020-03-29  John Darrington <john@darrington.wattle.id.au>

	*doc/poke.texi: Miscellaneous minor fixes.

2020-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/Makefile.am (pvm-insns.texi): New rule.
	(poke_TEXINFOS): Add pvm-insns.texi.
	* doc/gen-pvm-insns.sh: New file.
	* src/pvm.jitter: Document instructions.
	* doc/poke.texi (PVM Instructions): New chapter.

2020-03-28  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-parser.h (struct pkl_parser): New field `bootstrapped'.
	* src/pkl-parser.c (pkl_parse_file): Set parser->bootstrapped.
	(pkl_parse_buffer): Likewise.
	(pkl_parser_init): Initialize parser->bootstrapped.
	* src/pkl-lex.l: Do not acknowledge built-in identifiers if the
	compiler has been already bootstrapped.
	* testsuite/poke.pkl/builtins-1.pk: New test.

2020-03-28  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_var): Turn assert into ICE.
	* src/pk-def.c: Do not include stdio.h.
	(print_var_decl): Pass poke_obase to pvm_print_val.

2020-03-28  Jose E. Marchesi  <jemarch@gnu.org>
