@@ -50,6 +50,7 @@ gnulib_modules="
   fstat
   pmccabe2html
   strtoull
+  xstrndup
   "
 
 # TODO: Remove this after the 1.0 release. Until then, this helps developers
